<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">hng_s_application1</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
<string name="lbl_20">$20</string>
  <string name="lbl_reviews">Reviews</string>
  <string name="msg_don_t_have_an_a">Don\u2019t have an account? Register</string>
  <string name="lbl_5_days_4_nights">5 days 4 nights</string>
  <string name="msg_vacation_detail">Vacation Details</string>
  <string name="lbl_book_now">Book Now</string>
  <string name="lbl_25">$25</string>
  <string name="lbl_4_4_41">4.4 (41)</string>
  <string name="msg_polynesia_fren">Polynesia, French </string>
  <string name="lbl_32_person">$32 / Person</string>
  <string name="lbl_4_4">4.4 </string>
  <string name="lbl_australia">Australia</string>
  <string name="lbl_182">$182</string>
  <string name="lbl_see_all2">See all</string>
  <string name="msg_4_4_41_reviews">4.4 (41 Reviews)</string>
  <string name="lbl_see_all">See All</string>
  <string name="lbl_airport">Airport</string>
  <string name="lbl_get_started">Get Started</string>
  <string name="msg_st_lucia_mount">St. Lucia Mountain</string>
  <string name="msg_lorem_ipsum_dol">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tortor ac leo lorem nisl. Viverra vulputate sodales quis et dui, lacus. Iaculis eu egestas leo egestas vel. Ultrices ut magna nulla facilisi commodo enim, orci feugiat pharetra. Id sagittis, ullamcorper turpis ultrices platea pharetra.</string>
  <string name="lbl_41_reviews">(41 Reviews)</string>
  <string name="lbl_4_4_32">4.4 (32)</string>
  <string name="lbl_ledadu_beach">Ledadu Beach</string>
  <string name="lbl_register">Register</string>
  <string name="msg_frequently_visi">Frequently visited&#13;</string>
  <string name="lbl_south_america">South America</string>
  <string name="lbl_3_days_2_nights">3 days 2 nights</string>
  <string name="lbl_23_nov_2022">23 Nov 2022</string>
  <string name="lbl_20_person">$20/Person</string>
  <string name="lbl_41">(41)</string>
  <string name="lbl_search">Search...</string>
  <string name="msg_uttar_pradesh">Uttar Pradesh, India</string>
  <string name="lbl_on_budget_tour">On Budget Tour</string>
  <string name="msg_we_are_here_to">We are here to make your holiday easier</string>
  <string name="msg_don_t_have_an_a2">Don\u2019t have an account? </string>
  <string name="msg_amet_minim_moll">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit.</string>
  <string name="lbl_hi_andy">Hi, Andy</string>
  <string name="lbl_322">$32 </string>
  <string name="lbl_hotel">Hotel</string>
  <string name="lbl_details">Details</string>
  <string name="lbl_taxi">Taxi</string>
  <string name="lbl_25_person">$25/Person</string>
  <string name="lbl_tahiti_beach">Tahiti Beach</string>
  <string name="lbl_french">French </string>
  <string name="lbl_taj_mahal">Taj Mahal</string>
  <string name="lbl_person2">/ Person</string>
  <string name="lbl_netherlands">Netherlands</string>
  <string name="lbl_more">More</string>
  <string name="lbl_32">(32)</string>
  <string name="msg_lorem_ipsum_is">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
  <string name="lbl_polynesia">Polynesia, </string>
  <string name="lbl_235">$235</string>
  <string name="lbl_jhone_kenoady">Jhone Kenoady</string>
  <string name="lbl_endigada_beach">Endigada Beach</string>
  <string name="lbl_person">/Person</string>
</resources>
