<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearOnboarding"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:gravity="start"
            android:id="@+id/imageSubtract"
            android:layout_height="@dimen/_490pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_subtract}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_subtract"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtWearehereto"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_33pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/_8pxh"
            android:text="@string/msg_we_are_here_to"
            style="@style/txtPlusJakartaSansbold24" tools:text="@string/msg_we_are_here_to"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtLoremIpsumis"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.0"
            android:lineSpacingExtra="@dimen/_8pxh"
            android:text="@string/msg_lorem_ipsum_is"
            style="@style/txtPlusJakartaSansmedium14" tools:text="@string/msg_lorem_ipsum_is"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnGetStarted"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.0"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/lbl_get_started"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/lbl_get_started"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtConfirmation"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_28pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.0"
            android:lineSpacingExtra="@dimen/_5pxh"
            android:singleLine="true"
            android:text="@string/msg_don_t_have_an_a"
            style="@style/txtPlusJakartaSanssemibold16" tools:text="@string/msg_don_t_have_an_a"/>
    </LinearLayout>
</layout>
