<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:id="@+id/linearList"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <ImageView android:id="@+id/imageRectangle22469"
            android:layout_height="@dimen/_86pxh"
            android:layout_width="@dimen/_86pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_8pxh}"
            imageRes="@{@drawable/img_rectangle22469}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle22469"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearColumnledadubeach"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_5pxv"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_5pxv"
            android:layout_weight="0.47" android:layout_width="0dp" android:orientation="vertical">
            <TextView android:ellipsize="end"
                android:id="@+id/txtLedaduBeach"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.0"
                android:lineSpacingExtra="@dimen/_5pxh"
                android:singleLine="true"
                android:text="@string/lbl_ledadu_beach"
                style="@style/txtPlusJakartaSansbold16" tools:text="@string/lbl_ledadu_beach"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtDuration"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:letterSpacing="0.0"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true"
                android:text="@string/lbl_3_days_2_nights"
                style="@style/txtPlusJakartaSansmedium12" tools:text="@string/lbl_3_days_2_nights"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowvector"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_10pxh"
                android:layout_marginStart="@dimen/_3pxh"
                android:layout_marginTop="@dimen/_14pxv"
                android:layout_width="wrap_content" android:orientation="horizontal">
                <ImageView android:id="@+id/imageVectorThree"
                    android:layout_height="@dimen/_15pxh"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_width="@dimen/_12pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCountryOne"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_7pxh"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="match_parent"
                    android:letterSpacing="0.0"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_australia"
                    style="@style/txtPlusJakartaSansmedium12" tools:text="@string/lbl_australia"/>
            </LinearLayout>
        </LinearLayout>
        <TextView android:ellipsize="end" android:id="@+id/txtPriceTwo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_34pxv"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_weight="0.24" android:layout_width="0dp"
            android:letterSpacing="0.0"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@string/lbl_20_person"
            style="@style/txtPlusJakartaSansmedium12_1" tools:text="@string/lbl_20_person"/>
    </LinearLayout>
</layout>
