<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data/>
    <LinearLayout android:gravity="start" android:id="@+id/linearList"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" android:orientation="vertical">
        <FrameLayout android:id="@+id/frameStackrectangle22468"
            android:layout_height="@dimen/_150pxv" android:layout_width="@dimen/_156pxh">
            <ImageView android:id="@+id/imageRectangle22468"
                android:layout_gravity="start"
                android:layout_height="@dimen/_150pxh"
                android:layout_width="@dimen/_156pxh"
                android:scaleType="fitXY" cornerRadius="@{@dimen/_8pxh}"
                imageRes="@{@drawable/img_rectangle22468}"
                tools:ignore="ContentDescription" tools:src="@drawable/img_rectangle22468"/>
            <ImageButton
                android:background="@drawable/rectangle_bg_white_a700_radius_14"
                android:id="@+id/btnGroup100000346"
                android:layout_gravity="top|end"
                android:layout_height="@dimen/_28pxh"
                android:layout_marginBottom="@dimen/_13pxv"
                android:layout_marginEnd="@dimen/_8pxh"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_13pxv"
                android:layout_width="@dimen/_28pxh"
                android:paddingHorizontal="@dimen/_7pxh"
                android:paddingVertical="@dimen/_7pxv"
                android:scaleType="fitCenter"
                android:src="@drawable/img_group100000346" tools:ignore="ContentDescription"/>
        </FrameLayout>
        <TextView android:ellipsize="end"
            android:id="@+id/txtTahitiBeach"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="match_parent"
            android:letterSpacing="0.0"
            android:lineSpacingExtra="@dimen/_4pxh"
            android:singleLine="true"
            android:text="@string/lbl_tahiti_beach"
            style="@style/txtPlusJakartaSanssemibold14" tools:text="@string/lbl_tahiti_beach"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowvector"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10pxh"
            android:layout_marginStart="@dimen/_2pxh"
            android:layout_marginTop="@dimen/_8pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <ImageView android:id="@+id/imageVectorOne1"
                android:layout_height="@dimen/_11pxh"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_width="@dimen/_9pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_vector"
                tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
            <TextView android:ellipsize="end"
                android:id="@+id/txtLanguage"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6pxh"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.9" android:layout_width="0dp"
                android:letterSpacing="0.0"
                android:lineSpacingExtra="@dimen/_3pxh"
                android:singleLine="true"
                android:text="@string/msg_polynesia_fren"
                style="@style/txtPlusJakartaSansmedium10" tools:text="@string/msg_polynesia_fren"/>
        </LinearLayout>
        <LinearLayout android:id="@+id/linearRowprice"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginTop="@dimen/_10pxv"
            android:layout_width="wrap_content" android:orientation="horizontal">
            <TextView android:ellipsize="end" android:id="@+id/txtPrice"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_weight="0.36" android:layout_width="0dp"
                android:letterSpacing="0.0"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:singleLine="true" android:text="@string/lbl_235"
                style="@style/txtPlusJakartaSansbold14" tools:text="@string/lbl_235"/>
            <LinearLayout android:id="@+id/linearRowvectorOne"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_1pxv"
                android:layout_marginEnd="@dimen/_1pxh"
                android:layout_marginStart="@dimen/_58pxh"
                android:layout_marginTop="@dimen/_3pxv"
                android:layout_weight="0.64" android:layout_width="0dp" android:orientation="horizontal">
                <ImageView android:id="@+id/imageVectorOne2"
                    android:layout_height="@dimen/_11pxh"
                    android:layout_marginBottom="@dimen/_3pxv"
                    android:layout_marginTop="@dimen/_1pxv"
                    android:layout_width="@dimen/_11pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_vector_amber_400"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_vector_amber_400"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtTypeSixteen"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5pxh"
                    android:layout_weight="0.79"
                    android:layout_width="0dp"
                    android:letterSpacing="0.0"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@string/lbl_4_4_32"
                    style="@style/txtPlusJakartaSanssemibold12_1" tools:text="@string/lbl_4_4_32"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
